--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ for (var j = 0; j < 5; j++)
 if (j > 3 ) break ; // Quit the innermost loop
 if (i == 2) break innerloop; // Do the same thing
 if (i == 4) break outerloop; // Quit the outer loop
-document.write("Innerloop: " + j +": Merry Xmas"+ " <br />");
+document.write("Innerloop: " + j +": Merry Xmas to you all"+ " <br />");
 }
 }
 document.write("Exiting the loop!<br /><br/> ");
