--- a/index.html
+++ b/index.html
@@ -1,4 +1,15 @@
+<!doctype html>
 <html>
+<head>
+	<title> Coursera! </title>
+	<style type="text/css">
+		body {
+			background-color: #123456;
+			font: sans-serif;
+			text-align: center;
+		}
+	</style>
+</head>
 <body>
 <script type="text/javascript">
 <!--
@@ -13,7 +24,7 @@ for (var j = 0; j < 5; j++)
 if (j > 3 ) break ; // Quit the innermost loop
 if (i == 2) break innerloop; // Do the same thing
 if (i == 4) break outerloop; // Quit the outer loop
-document.write("Innerloop: " + j +": Merry Xmas to you all"+ " <br />");
+document.write("Innerloop: " + j +": Merry Xmas"+ " <br />");
 }
 }
 document.write("Exiting the loop!<br /><br/> ");
